--- a/Project 1- Google Homepage/style/style.css
+++ b/Project 1- Google Homepage/style/style.css
@@ -2,33 +2,58 @@
   border: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: arial, sans-serif;
+}
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+/* FOOTER STYLING (ALMOST DONE) */
+
+.f2_container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 1.6rem 3.2rem;
 }
 
 .f1_container,
-.f2_container,
-.f3_container {
+.f2_container {
   background: #f2f2f2;
-  padding: 1rem;
+  padding: 1.5rem 3rem;
   color: #70757a;
 }
 
-.f1_container,
-.f2_container > a,
-.f3_container > a {
+.f2_1 > a,
+.f2_2 > a {
   background: #f2f2f2;
   padding: 1rem;
   color: #70757a;
   text-decoration: none;
 }
 
+.f2_1 > a:hover,
+.f2_2 > a:hover {
+  text-decoration: underline;
+}
+
 .f1_container {
+  color: #70757a;
+  font-size: 1.5rem;
   border-bottom: 1px solid #e0e1e4;
 }
 
-.searchbar {
-  border: 1px solid black;
-  width: 30%;
-  height: 2em;
+.f2_container {
+  font-size: 1.4rem;
+  padding: 1.5rem 1.5rem;
 }
 
 footer {
@@ -36,4 +61,155 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+/* NAVBAR STYLING */
+nav {
+  font-family: arial, sans-serif;
+  font-size: 1.3rem;
+  float: right;
+  padding: 1.4rem;
+  margin-bottom: 2rem;
+}
+
+nav > ul {
+  list-style: none;
+  display: flex;
+}
+
+nav > ul > li {
+  padding-top: 0.8rem;
+  padding-left: 2rem;
+}
+
+.nav_list > li > a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.nav_list > li > a:hover {
+  text-decoration: underline;
+}
+
+.nav1,
+.nav2 {
+  position: relative;
+  height: 4rem;
+  width: 4rem;
+  margin-top: -1rem;
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+#apps {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -36%);
+  height: 2.5rem;
+  margin-top: -0.4rem;
+  opacity: 0.6;
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+#profile {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -32%);
+  border: 1px solid transparent;
+  border-radius: 50%;
+  height: 3.2rem;
+  margin-top: -0.6rem;
+}
+
+.nav1:hover,
+.nav2:hover {
+  background-color: rgba(60, 64, 67, 0.08);
+}
+
+/* MAIN BODY STYLING */
+
+main {
+  position: absolute;
+  top: 32%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+#search1,
+#search2 {
+  background-color: #f8f9fa;
+  display: inline-block;
+  padding: 0.8rem 1.5rem;
+  margin-left: 1.2rem;
+  color: #3c4043;
+  text-decoration: none;
+  border-radius: 0.4rem;
+  text-align: center;
+}
+
+#search1:hover,
+#search2:hover {
+  box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1);
+  border: 1px solid #dadce0;
+  color: #202124;
+}
+
+.img_container {
+  margin-bottom: 2rem;
+}
+
+.searchbar {
+  display: flex;
+  width: 58.6rem;
+  height: 4.2rem;
+  border-radius: 4.2rem;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid #dadce0;
+  margin-bottom: 2rem;
+}
+
+.searchbar:hover {
+  box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
+  border-color: rgba(223, 225, 229, 0.1);
+}
+
+.search_text {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: #222;
+  font-size: 1.4rem;
+  line-height: 4.2rem;
+  width: 100%;
+}
+
+#search_icon {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  opacity: 0.4;
+  height: 1.8rem;
+}
+
+.covid_container {
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+.lang_container {
+  font-size: 1.4rem;
 }
