--- a/javascript_projects/tic-tac-toe/style.css
+++ b/javascript_projects/tic-tac-toe/style.css
@@ -6,71 +6,132 @@
 
 :root {
   font-size: 62.5%;
-  --marker-color: #503047;
+  --body-color: #dce1de;
+  --board-color: #412234;
+  --marker-color: #7d7abc;
 }
 
-td {
-  border: 2px solid var(--marker-color);
+section {
+  background-color: var(--body-color);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  color: var(--board-color);
+  font-family: "Comic Sans", cursive;
+  padding: 1em;
+  font-size: 4rem;
+  font-weight: 800;
+}
+
+.console {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.board {
+  width: 50vw;
+  height: 50vh;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  place-content: center;
+}
+
+.cell {
+  cursor: pointer;
+  font-family: "Comic Sans MS", cursive;
   height: 100px;
   width: 100px;
+  font-size: 65px;
   text-align: center;
   vertical-align: middle;
-  font-family: "Comic Sans MS", cursive;
-  font-size: 70px;
-  cursor: pointer;
   color: var(--marker-color);
+  background-color: var(--board-color);
+  border: 2px solid var(--marker-color);
 }
 
-table {
-  border-collapse: collapse;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-table tr:first-child td {
+.cell:first-child,
+.cell:nth-child(2),
+.cell:nth-child(3) {
   border-top: 0;
 }
-table tr:last-child td {
+
+.cell:last-child,
+.cell:nth-child(7),
+.cell:nth-child(8) {
   border-bottom: 0;
 }
 
-table tr td:first-child {
+.cell:first-child,
+.cell:nth-child(4),
+.cell:nth-child(7) {
   border-left: 0;
 }
-table tr td:last-child {
+
+.cell:nth-child(3),
+.cell:nth-child(6),
+.cell:last-child {
   border-right: 0;
 }
 
-.endgame {
-  position: absolute;
+.messageBox,
+.popUp {
   display: none;
-  /* display: flex; */
-  flex-direction: column;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(8, 0, 27, 0.9);
   justify-content: center;
-  width: 100vw;
-  height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.8);
+  align-items: center;
   color: white;
   font-size: 5rem;
+  flex-direction: column;
 }
 
-button {
-  margin-top: 2em;
-  width: 5em;
-  height: 2em;
-  font-size: 2rem;
-  font-weight: 600;
-  border: none;
+#restart {
+  font-size: 3rem;
+  background-color: white;
+  border: 1px solid black;
+  padding: 0.25em 0.5em;
+  cursor: pointer;
+  transition: 0.5s;
   border-radius: 10px;
 }
 
-button:hover {
+#restart:hover {
+  background-color: rgba(55, 4, 71, 0.4);
   color: white;
-  background-color: #555;
+  border-color: white;
+}
+
+.messageBox,
+.popUp button {
+  font-size: 3rem;
+  background-color: white;
+  border: 1px solid black;
+  padding: 0.25em 0.5em;
+  cursor: pointer;
+  transition: 0.5s;
+  border-radius: 10px;
+}
+
+.messageBox,
+.popUp button:hover {
+  background-color: rgba(55, 4, 71, 0.4);
+  color: white;
+  border-color: white;
+}
+
+.popUp {
+  display: flex;
+  justify-content: space-evenly;
 }
