--- a/javascript_projects/restarurant-page/src/css/style.css
+++ b/javascript_projects/restarurant-page/src/css/style.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Nunito:wght@300;600&family=Poppins:wght@300;500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
 }
 
 body {
@@ -19,4 +25,83 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+#content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+  background-color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 4em;
+}
+
+nav h1 {
+  font-family: "Monsieur La Doulaise", cursive;
+  font-size: 8rem;
+  text-align: center;
+  color: #fff;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+nav ul a {
+  margin: 2rem 2rem 0 2rem;
+  text-decoration: none;
+  color: #fff;
+  font-size: 3rem;
+}
+
+nav ul a:hover {
+  border-bottom: 4px solid #fff;
+  transition: 0.2s;
+}
+
+.box {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 50vw;
+  align-self: center;
+}
+
+.box h1 {
+  font-size: 4rem;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  color: #fff;
+  vertical-align: middle;
+}
+
+footer {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  padding: 2rem;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerText h1 {
+  font-size: 2.4rem;
+  color: #fff;
+}
+
+.footerText p {
+  font-size: 1.6rem;
+  color: #fff;
 }
