--- a/javascript_projects/restarurant-page/src/css/style.css
+++ b/javascript_projects/restarurant-page/src/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 .bg {
@@ -31,9 +31,11 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 nav {
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -104,4 +106,64 @@ footer {
 .footerText p {
   font-size: 1.6rem;
   color: #fff;
+}
+
+.menuBody {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 80%;
+  padding: 4em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-bottom: 12rem;
+}
+
+.left {
+  align-self: flex-start;
+}
+
+.right {
+  align-self: flex-end;
+}
+
+.card {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.foodTitle {
+  font-family: "Poppins", sans-serif;
+  font-size: 3rem;
+  color: #fff;
+}
+
+.foodDescription {
+  font-family: cursive;
+  font-size: 2rem;
+  color: #fff;
+  opacity: 0.7;
+}
+
+.imgContainer {
+  width: 120px;
+  height: 120px;
+  border-radius: 10px;
+}
+
+.imgContainer img {
+  width: 100%;
+  height: 100%;
+}
+
+.miniDiv {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card {
+  background-color: rgba(0, 0, 0, 0.6);
+  margin: 1em;
 }
