--- a/javascript_projects/restarurant-page/src/css/style.css
+++ b/javascript_projects/restarurant-page/src/css/style.css
@@ -19,15 +19,18 @@ body {
   background-image: url("../images/restaurant.jpg");
 
   /* Full height */
-  height: 100%;
+  height: 100vh;
 
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 #content {
+  width: 100%;
+  height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -61,6 +64,8 @@ nav ul {
 }
 
 nav ul a {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
   margin: 2rem 2rem 0 2rem;
   text-decoration: none;
   color: #fff;
@@ -74,17 +79,33 @@ nav ul a:hover {
 
 .box {
   border-radius: 5px;
+  padding: 2em;
   background-color: rgba(0, 0, 0, 0.4);
   width: 50vw;
   align-self: center;
-}
-
-.box h1 {
-  font-size: 4rem;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   font-family: "Nunito", sans-serif;
   color: #fff;
   vertical-align: middle;
+}
+
+.box h1 {
+  font-size: 4rem;
+}
+
+.box h2 {
+  font-size: 3.6rem;
+}
+
+.box h3 {
+  font-size: 3rem;
+}
+
+.box p {
+  font-size: 2rem;
+  font-weight: 300;
 }
 
 footer {
@@ -99,11 +120,15 @@ footer {
 }
 
 .footerText h1 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
   font-size: 2.4rem;
   color: #fff;
 }
 
 .footerText p {
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
   font-size: 1.6rem;
   color: #fff;
 }
@@ -116,54 +141,58 @@ footer {
   flex-direction: column;
   justify-content: space-evenly;
   margin-bottom: 12rem;
-}
-
-.left {
-  align-self: flex-start;
-}
-
-.right {
-  align-self: flex-end;
-}
-
-.card {
-  padding: 2em;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  border-radius: 10px;
 }
 
 .foodTitle {
-  font-family: "Poppins", sans-serif;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
   font-size: 3rem;
   color: #fff;
+  padding: 2rem;
 }
 
 .foodDescription {
-  font-family: cursive;
-  font-size: 2rem;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  padding: 2rem;
   color: #fff;
   opacity: 0.7;
 }
 
 .imgContainer {
-  width: 120px;
-  height: 120px;
-  border-radius: 10px;
+  width: 300px;
+  height: 300px;
 }
 
 .imgContainer img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 
 .miniDiv {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 60%;
 }
 
 .card {
+  padding: 2em;
+  border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.6);
   margin: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  cursor: pointer;
+}
+
+.card:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
 }
