--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -1,22 +1,145 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 :root {
   font-size: 62.5%;
 }
 
-body, html {
+body,
+html {
+  font-family: "Lato", sans-serif;
   height: 100%;
 }
 
+#content {
+  position: relative;
+}
+
 .background {
-    height: 100%;
-    background-image: url("../images/background.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-attachment: fixed;
-    background-position: center;
+  min-height: 100%;
+  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.flex {
+  display: flex;
+  padding: 2rem;
+}
+
+.header {
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
+  width: 100%;
+  justify-content: flex-start;
+}
+
+.header-text {
+  font-size: 4rem;
+  font-weight: 400;
+}
+
+.highlight {
+  font-weight: 700;
+  color: rgb(199, 12, 12);
+  text-transform: uppercase;
+}
+
+.footer {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
+}
+
+.footer-text-one {
+  font-size: 2rem;
+}
+
+.footer-text-two {
+  font-size: 1.8rem;
+}
+
+.box {
+  position: relative;
+  flex-direction: row;
+  /* justify-content: space-between; */
+  padding: 0;
+}
+
+.view {
+  width: 50vw;
+  margin-left: 18em;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.side-panel {
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  width: 20%;
+  min-height: 72.7vh;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.project-list {
+  list-style-type: none;
+}
+
+.project-div {
+ background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
+  min-width: 21rem;
+  max-width: 100%;
+  padding: 1rem;
+  cursor: pointer;
+  border-bottom: 2px solid black;
+  margin-bottom: 0.5rem;
+  border-radius: 10px;
+}
+
+.project-name {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+#addProject{
+  cursor: pointer;
+  border: none;
+  font-size: 3rem;
+  width: 100%;
+  height: 100%;
+  background: transparent;
 }
