--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -34,25 +34,24 @@ html {
 }
 
 .header {
-  background: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.15) 0%,
-      rgba(0, 0, 0, 0.15) 100%
-    ),
-    radial-gradient(
-        at top center,
-        rgba(255, 255, 255, 0.4) 0%,
-        rgba(0, 0, 0, 0.4) 120%
-      )
-      #989898;
-  background-blend-mode: multiply, multiply;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
   width: 100%;
   justify-content: flex-start;
+  color: white;
 }
 
 .header-text {
   font-size: 4rem;
   font-weight: 400;
+}
+
+.img-box {
+  width: 8rem;
+}
+
+.img-box img{
+  width: 100%;
+  color: white;
 }
 
 .highlight {
@@ -65,18 +64,8 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.15) 0%,
-      rgba(0, 0, 0, 0.15) 100%
-    ),
-    radial-gradient(
-        at top center,
-        rgba(255, 255, 255, 0.4) 0%,
-        rgba(0, 0, 0, 0.4) 120%
-      )
-      #989898;
-  background-blend-mode: multiply, multiply;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+  color: white;
 }
 
 .footer-text-one {
@@ -95,8 +84,7 @@ html {
 }
 
 .view {
-  width: 50vw;
-  margin-left: 18em;
+  flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -115,19 +103,24 @@ html {
   align-items: flex-start;
 }
 
-.project-list {
+.project-list,
+.to-do-list {
   list-style-type: none;
 }
 
 .project-div {
- background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
   min-width: 21rem;
   max-width: 100%;
   padding: 1rem;
   cursor: pointer;
-  border-bottom: 2px solid black;
   margin-bottom: 0.5rem;
   border-radius: 10px;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+}
+
+.project-div:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: red;
 }
 
 .project-name {
@@ -135,11 +128,35 @@ html {
   font-weight: 400;
 }
 
-#addProject{
+#addProject {
   cursor: pointer;
   border: none;
   font-size: 3rem;
   width: 100%;
   height: 100%;
   background: transparent;
+}
+
+.view {
+  flex-direction: column;
+  align-items: center;
+}
+
+#addToDo {
+  background-color: #98ce00;
+  font-weight: 700;
+  width: 100%;
+  padding: 1.3rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 1.6rem;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+#addToDo:hover {
+  background-color: #6FD08C;
+  color: #fff;
+  transform: scale(0.98);
 }
