--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -49,18 +51,19 @@ html {
   width: 8rem;
 }
 
-.img-box img{
+.img-box img {
   width: 100%;
   color: white;
 }
 
 .highlight {
+  font-family: "Kaushan Script", cursive;
   font-weight: 700;
   color: rgb(199, 12, 12);
-  text-transform: uppercase;
 }
 
 .footer {
+  padding: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -79,7 +82,6 @@ html {
 .box {
   position: relative;
   flex-direction: row;
-  /* justify-content: space-between; */
   padding: 0;
 }
 
@@ -118,7 +120,16 @@ html {
   box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 
-.project-div:hover {
+#addProject {
+  cursor: pointer;
+  border: none;
+  font-size: 3rem;
+  width: 100%;
+  background: transparent;
+}
+
+.project-div:hover,
+#addProject:hover {
   background-color: rgba(0, 0, 0, 0.1);
   color: red;
 }
@@ -128,24 +139,34 @@ html {
   font-weight: 400;
 }
 
-#addProject {
-  cursor: pointer;
-  border: none;
-  font-size: 3rem;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-}
-
 .view {
   flex-direction: column;
   align-items: center;
+}
+
+.to-do-list {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.to-do-div {
+  width: 100%;
+  height: 6em;
+  padding: 2rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  background-color: rgb(0, 0, 0, 0.1);
 }
 
 #addToDo {
   background-color: #98ce00;
   font-weight: 700;
   width: 100%;
+  height: auto;
   padding: 1.3rem;
   cursor: pointer;
   margin-bottom: 0.5rem;
@@ -156,7 +177,14 @@ html {
 }
 
 #addToDo:hover {
-  background-color: #6FD08C;
-  color: #fff;
-  transform: scale(0.98);
+  transform: scale(0.99);
+  transition: all 0.1s ease;
+}
+
+.project-title {
+  align-self: flex-start;
+  font-size: 3rem;
+  font-weight: 700;
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
