adjusted size of project-list

--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -107,12 +107,12 @@ html {
 
 .project-list,
 .to-do-list {
+  width: 100%;
   list-style-type: none;
 }
 
 .project-div {
-  min-width: 21rem;
-  max-width: 100%;
+  width: 100%;
   padding: 1rem;
   cursor: pointer;
   margin-bottom: 0.5rem;
