--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -103,6 +103,7 @@ html {
   min-height: 72.7vh;
   flex-direction: column;
   align-items: flex-start;
+  border-radius: 2.6rem ;
 }
 
 .project-list,
