--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -103,7 +103,7 @@ html {
   min-height: 72.7vh;
   flex-direction: column;
   align-items: flex-start;
-  border-radius: 2.6rem ;
+  border-radius: 2.6rem;
 }
 
 .project-list,
@@ -114,7 +114,7 @@ html {
 
 .project-div {
   width: 100%;
-  padding: 1rem;
+  /* padding: 1rem; */
   cursor: pointer;
   margin-bottom: 0.5rem;
   border-radius: 10px;
@@ -122,6 +122,7 @@ html {
 }
 
 #addProject {
+  padding: 1rem;
   cursor: pointer;
   border: none;
   font-size: 3rem;
@@ -136,6 +137,9 @@ html {
 }
 
 .project-name {
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
   font-size: 2rem;
   font-weight: 400;
 }
