--- a/javascript_projects/to-do list/src/static/css/style.css
+++ b/javascript_projects/to-do list/src/static/css/style.css
@@ -158,19 +158,23 @@ html {
 
 .to-do-div {
   width: 100%;
-  height: 6em;
+  min-height: 8em;
   padding: 2rem;
   cursor: pointer;
   margin-bottom: 0.5rem;
   border-radius: 10px;
   font-size: 1.6rem;
   background-color: rgb(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #addToDo {
   background-color: #98ce00;
   font-weight: 700;
   width: 100%;
+  min-height: auto;
   height: auto;
   padding: 1.3rem;
   cursor: pointer;
@@ -179,6 +183,7 @@ html {
   text-align: center;
   font-size: 1.6rem;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  display: block;
 }
 
 #addToDo:hover {
@@ -192,4 +197,22 @@ html {
   font-weight: 700;
   padding: 1rem;
   margin-bottom: 1rem;
+}
+
+.title-1 {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.text- {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.small-div {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
