--- a/javascript_projects/weather-app/src/static/css/globals.css
+++ b/javascript_projects/weather-app/src/static/css/globals.css
@@ -18,6 +18,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  
 }
 
 .container {
@@ -46,4 +47,9 @@ a:visited {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+main.flex {
+  flex-direction: row;
+  justify-content: center;
 }
