--- a/javascript_projects/weather-app/src/static/css/main.css
+++ b/javascript_projects/weather-app/src/static/css/main.css
@@ -1,10 +1,15 @@
+
+
 .card {
   flex-direction: column;
+  justify-content: center;
   margin: 0 1.6rem;
   width: 30%;
   height: 69vh;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.8);
   border-radius: 1rem;
+  font-size: 1.6rem;
+  color: #fff;
 }
 
 .forecast {
@@ -13,6 +18,13 @@
   margin: 0 1.6rem;
   width: 30%;
   height: 69vh;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.8);
   border-radius: 1rem;
+}
+
+.weather-div {
+  height: 80%;
+  flex-direction: column;
+  justify-content: space-around;
+  cursor: pointer;
 }
