--- a/javascript_projects/weather-app/src/static/css/header.css
+++ b/javascript_projects/weather-app/src/static/css/header.css
@@ -44,3 +44,33 @@ header h1 {
   width: 10rem;
   padding: 0 0.6rem;
 }
+
+@media (max-width: 750px) {
+  header {
+    flex-direction: column;
+  }
+  header h1 {
+    margin-bottom: 2rem;
+
+  }
+  .search-box {
+    width: 80%;
+  padding: 0 0.6rem;
+  }
+
+  .search-btn {
+    background: white;
+  }
+
+  .search-text {
+  border: none;
+  background: none;
+  outline: none;
+  padding: 0;
+  color: white;
+  font-size: 1.2rem;
+  transition: 500ms;
+  line-height: 6rem;
+  width: 80%;
+}
+}
